--- a/web_source/style/test.css
+++ b/web_source/style/test.css
@@ -109,6 +109,15 @@
 	box-shadow: 0px 4px 4px rgba(0,0,0,0.08);
 }
 
+.testing .right .result .view-btn {
+	background-color: #7a7a7a;
+	cursor: context-menu;
+}
+
+.testing .right .result .view-btn:hover {
+	background-color: #7a7a7a;
+}
+
 .view-code {
 	width: 100%;
 	height: 100%;
